k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-09-16T20:36:02Z"
  labels:
    app: order-api
  name: order-api-svc
  namespace: order-app
  resourceVersion: "6044"
  uid: 82f2a911-d8f2-41a6-b319-309414532103
spec:
  clusterIP: 10.96.130.105
  clusterIPs:
  - 10.96.130.105
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30836
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: order-api
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
